external-crates/move/crates/move-compiler/tests/move_check/parser/byte_string_token_eof1.exp
error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/byte_string_token_eof1.move:3:9
  │
3 │         b"diem\"
  │         ^^^^^^^^ Missing closing quote (") after byte string

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/byte_string_token_eof1.move:4:5
  │
2 │     public fun bad_value(): vector<u8> {
  │                             ---------- Expected: 'vector<u8>'
3 │         b"diem\"
4 │     }
  │     ^
  │     │
  │     Invalid return expression
  │     Given: '()'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/byte_string_token_eof1.move:5:1
  │
5 │ }
  │ ^ Invalid code unit. Expected 'address' or 'module'. Got '}'

